Add FE in one fell swoop.

--- a/fe-ingress.yaml
+++ b/fe-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: workout-api-ingress
+  name: workout-app-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
@@ -12,6 +12,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: workout-app-service
+            name: workout-fe-service
             port:
-              number: 80
+              number: 3000
