--- a/templates/api-deployment.yaml
+++ b/templates/api-deployment.yaml
@@ -33,4 +33,5 @@ spec:
               secretKeyRef:
                 name: application-secrets
                 key: USER_CREATION_SECRET
-
+          - name: POSTGRES_USER
+            value: {{ .Values.global.postgresql.auth.username }}
