--- a/templates/fe-deployment.yaml
+++ b/templates/fe-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: workout-fe-deployment
+  name: {{ .Release.Name }}-fe
 spec:
   replicas: 1
   selector:
